<resources>
    <string name="hello">Use o log (adb logcat no SDK) para debugar</string>
    <string name="app_name">Truco Mineiro</string>
    <string name="tituloJogar">Jogar</string>
    <string name="atoa"></string>
    <string name="mCreditos">Créditos</string>
    <string name="mRegras">Regras</string>
    <string name="mHistoria">História</string>
    <string name="mSinais">Sinais</string>
    <string name="mEstatisticas">Estatísticas</string>
    <string name="mAjuda">Ajuda</string>
    <string name="mConfiguracoes">Configurações</string>
    <string name="mSair">Sair</string>
<string-array name="balao_aumento_1">
        <item>Truco vagabundo!</item>
        <item>Quero Truco</item>
        <item>Truuuco!</item>
        <item>Truco Ladrão</item>
    </string-array>
    <string-array name="balao_aumento_2">
        <item>Seis Ladrão!</item>
        <item>Meia Vara!</item>
        <item>Seeeeiiis!</item>
        <item>Seis só!</item>
    </string-array>
    <string-array name="balao_aumento_3">
        <item>Então é Nove!</item>
        <item>Quero Nove!</item>
        <item>Nooooveee!</item>
        <item>Nove ladrão!</item>
    </string-array>
    <string-array name="balao_aumento_4">
        <item>Então é Nove!</item>
        <item>Quero Nove!</item>
        <item>Nooooveee!</item>
        <item>Nove ladrão!</item>
    </string-array>
    <string-array name="balao_aumento_sim">
        <item>Mostra Ladrão!</item>
        <item>Eu Quero ver!</item>
        <item>Mostra as cartas!</item>
        <item>Joga ladrão!</item>
    </string-array>
    <string-array name="balao_aumento_nao">
        <item>Tô fora ladrão.</item>
        <item>Quero não!</item>
        <item>Vou não!</item>
        <item>Nem vem!</item>
    </string-array>
    <string-array name="balao_vitoria">
        <item>É queda nossa!</item>
        <item>Mais uma queda!</item>
        <item>Vitória nossa!</item>
        <item>Ganhamos a queda!</item>
    </string-array>
    <string-array name="balao_ganha_jogo">
        <item>Fizemos jogo!</item>
        <item>Estamos na frente!</item>
        <item>É jogo nosso!!</item>
        <item>Ganhamos o jogo!</item>
    </string-array>
    <string-array name="balao_empata_jogo">
        <item>Empatamos o jogo!</item>
        <item>Tudo igual!</item>
        <item>É jogo a jogo!</item>
        <item>Tudo empatado!</item>
    </string-array>
    <string-array name="balao_mao11_sim">
        <item>Pode jogar.</item>
        <item>Bate carta.</item>
        <item>Cai carta.</item>
        <item>Joga que eu tenho!</item>
    </string-array>
    <string-array name="balao_mao11_nao">
        <item>Corri pro baralho!</item>
        <item>Mão de manbaia.</item>
        <item>Não vou jogar.</item>
        <item>Não vou.</item>
    </string-array>
    <string-array name="balao_abortou">
        <item>Tchau</item>
    </string-array>
    <string name="titulo_ajuda">Truco Mineiro!</string>
    <string name="titulo_sinais">Sinais do jogo</string>
    <string name="titulo_regras">Regras do truco!</string>
    <string name="titulo_historia">História do truco!</string>
    <string name="titulo_creditos">Créditos</string>
    <string name="texto_ajuda">         <![CDATA[
        Este jogo tenta ser uma cópia fiel do jogo de truco jogado com baralho e adversários humanos. As regras são identicas
        e a estratégia tenta copiar o jogo dos trucadores mineiros.<br/><br/>
        O jogo também utiliza vozes para os \"gritos\" normais do truco e possui também o sistema de envio de sinais (do computador
        para o jogador apenas).<br/><br/>
        <b><u>Opções do menu</u></b><br/><br/>
        <b>Regras do truco</b> - Mostra as regras do truco utilizadas em Belo Horizonte-MG. Lembre-se que não existe 
        um conjuntoAs regras universais, por isso você deve consultar as regras aplicadas neste jogo.<br/><br/>
        <b>História do truco</b> - Mostra a história do truco, como, quando e onde ele foi criado e também
        algumas curiosidades.<br/><br/>
        <b>Estatísticas</b> - Mostra a quantidade de vitórias, derrotas e aproveitamento total e de cada jogador.<br/><br/>
        <b>Configurações</b> - Permite alterar as seguintes configurações do sistema:<br/><br/>
        <b><i>Selecionar Jogador</i></b> - Permite que você selecione o jogador que irá utilizar. São quatro opções: Renato, Félix, Luciana e Leila.<br/><br/>
        <b><i>Revezar Jogador</b></i> - Quando marcado faz com que o jogador seja trocada automáticamente ao final de cada partida.<br/><br/>
        <b><i>Agressividade</b></i> - Definir a agressividade, ou seja, a predisposição do jogador em trucar, aceitar truco e roubar.<br/><br/>
        <b><i>Passar Sinal</i></b> - Configura se e como os sinais serão enviados.<br/><br/>
        <b><i>Cartas para sinal</i></b> - Informa até qual carta o sistema irá enviar os sinais.<br/><br/>
        <b><i>Gritos do jogo</i></b> - Configura como os jogadores irão dizer truco.<br/><br/>
        <b><i>Sair</b></i> - Sai do jogo.<br/><br/>        
        		]]>
    </string>
    <string name="texto_sinais">         <![CDATA[
        Estes são os sinais que o jogo enviará para o jogador no início de cada rodada. 
        Os sinais serão exibidos apenas uma vez, por isso preste atenção no início de cada mão.<br/>
        Se os sinais não estiverem aparecendo você deve ativar no menu de configuração.<br/><br/> 
        <b>Zap</b> - Olhar para cima<br/><br/>
        <b>Escopeta</b> - Olhar para baixo<br/><br/>
		<b>Espadilha</b> - Olhar para direita<br/><br/>
		<b>Pica-Fummo</b> - Olhar para esquerda<br/><br/>
		<b>Três</b> - Piscar olho direito<br/><br/>
		<b>Dois</b> - Piscar olho esquerdo<br/><br/>
		<b>Az</b> - Piscar os dois olhos<br/><br/>
		<b>Rei</b> - Piscar olho direito e olhar para direita<br/><br/>
		<b>Valete</b> - Piscar olho esquerdo e olhar para esquerda<br/><br/>
		<b>Dama</b> - Olhar para direita e esquerda<br/><br/>
		<b>Sete</b> - Piscar os olhos alternadamente<br/><br/>
		<b>Seis</b> - Olhar para direita e depois piscar os dois olhos<br/><br/>
		<b>Cinco</b> - Olhar para esquerda e depois piscar os dois olhos<br/><br/>
		<b>Quatro</b> - Fechar os dois olhos<br/><br/>
        		]]>
    </string>
    <string name="tituloCategoria1">Jogador</string>
    <string name="tituloCategoria2">Agressividade</string>
    <string name="tituloCategoria3">Passar Sinal</string>
    <string name="tituloCategoria5">Regras do jogo</string>
    <string name="tituloDoisFechada">Cartas cobertas</string>
    <string name="textoDoisFechada">Apenas um jogador da dupla pode jogar carta coberta por rodada</string>
    <string name="tituloAbreQuemAmarra">Primeira rodada amarrada</string>
    <string name="textoAbreQuemAmarra">O jogador que amarrou na primeira rodada é o primeiro a mostrar a carta maior</string>
    <string name="tituloMaoDezAberta">Mão de dez aberta</string>
    <string name="textoMaoDezAberta">Na mão de dez o parceiro pode ver as cartas do outro</string>
    <string name="tituloRevesar">Revezar Jogador</string>
    <string name="textoRevesar">Trocar de jogador automáticamente a cada  partida</string>
    <string name="tituloMeuJogador">Selecionar Jogador</string>
    <string name="textoMeuJogador">Selecione o Jogador que você vai utilizar.</string>
    <string name="tituloParceiro">Parceiro</string>
    <string name="textoParceiro">Selecione a agressividade do seu parceiro.</string>
    <string name="tituloAdversario2">Adversário 2</string>
    <string name="textoAdversario2">Selecione a agressividade do adversário que fica a sua esquerda </string>
    <string name="tituloAdversario1">Adversário 1</string>
    <string name="textoAdversario1">Selecione a agressividade do adversário que fica a sua direita.</string>
    <string name="tituloSinal">Passar Sinal</string>
    <string name="textoSinal">Controla como o jogador do computador vai passar sinal</string>
    <string name="tituloSinalForca">Cartas para sinal</string>
    <string name="textoSinalForca">Informa a partir de qual carta o sistema irá passar os sinais</string>
    <string name="tituloCategoria4">Grito</string>
    <string name="tituloGrito">Gritos do jogo</string>
    <string name="textoGrito">Controla como o jogador irá dizer as frases do jogo.</string>
</resources>